--- a/src/output.css
+++ b/src/output.css
@@ -711,6 +711,14 @@ video {
   cursor: pointer;
 }
 
+.scroll-mt-16 {
+  scroll-margin-top: 4rem;
+}
+
+.scroll-mt-24 {
+  scroll-margin-top: 6rem;
+}
+
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
